--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "react-dom": "^19.2.0",
     "react": "^19.2.0",
-    "framer-motion": "^11.3.11",
-    "@google/genai": "^1.29.0"
+    "framer-motion": "^11.3.11"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
