--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portaverse",
+  "name": "portverse",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,7 +11,8 @@
   "dependencies": {
     "react-dom": "^19.2.0",
     "react": "^19.2.0",
-    "framer-motion": "^11.3.11"
+    "framer-motion": "^11.3.11",
+    "firebase": "^12.5.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
